--- a/app/views/admin/portadas/search_post.js.haml
+++ b/app/views/admin/portadas/search_post.js.haml
@@ -1,5 +1,5 @@
 - unless @posts.empty?
-  - radio = ["especial","weather", "dod", "police-dod"].include?(@type) ? true : false
+  - radio = ["especial","weather", "dod", "police-dod", "quote"].include?(@type) ? true : false
   - if radio
     - type = @type
   - else
