--- a/app/assets/stylesheets/blog/portada.css.less
+++ b/app/assets/stylesheets/blog/portada.css.less
@@ -396,4 +396,43 @@ h2.titulo-tag {
     }
   }
 
+  .quote {
+    margin-bottom: 5px;
+    padding-bottom: 5px;
+    a {
+      color: #000000;
+      &:hover {
+        color: #000000;
+      }
+    }
+    blockquote {
+      background:#EEEEEE;
+      margin: .5em 10px;
+      padding:.5em 10px;
+      quotes:"\201C""\201D""\2018""\2019";
+      &:before {
+        color: #4D4D4D;
+        content: open-quote;
+        font-size: 11em;
+        line-height: 0px;
+        vertical-align: -0.7em;
+        font-family: Helvetica;
+      }
+      p {
+        font-size: 16px;
+        &.author {
+          font-size: 14px;
+        }
+        &.charge {
+          font-size: 12px;
+        }
+      }
+      footer{
+        background: none;
+        text-align: right;
+
+      }
+    }
+  }
+
 }
