--- a/app/views/portada/_section_b.html.slim
+++ b/app/views/portada/_section_b.html.slim
@@ -76,7 +76,7 @@ section.section_b
         h2.titulo-bloque Resumen
         = raw @portada.soundcloud_frame
     article.foto-nota
-      #myCarousel.carousel.slide
+      #foto-nota.carousel.slide
         /! Carousel items
         .carousel-inner
           - @picture_only.each_with_index do |post, i|
