--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,4 +13,5 @@
  *= require 'highlight/sunburst'
  *= require_tree ./blog
 */
-@import url(http://fonts.googleapis.com/css?family=Titillium+Web&subset=latin,latin-ext);
+@import url(http://fonts.googleapis.com/css?family=Titillium+Web:400,300italic,300,200,200italic,400italic,600,600italic,700,700italic,900);
+
