--- a/app/assets/stylesheets/blog/portada.css.less
+++ b/app/assets/stylesheets/blog/portada.css.less
@@ -434,5 +434,25 @@ h2.titulo-tag {
       }
     }
   }
+  .opiniones{
+    #opinion {
+      .item {
+        text-align: center;
+        padding: 0 30px;
+        a, a:hover {
+          color: #000000;
+          img {
+             width: 180px;
+            height: 180px;
+          }
+          p.balazo {
+            color:  #7F7F7F;
+            margin-bottom: 5px;
+            font-weight: 700;
+          }
+        }
+      }
+    }
+  }
 
 }
