avoid show post with no name

--- a/app/views/portada/_section_b.html.slim
+++ b/app/views/portada/_section_b.html.slim
@@ -68,7 +68,7 @@ section.section_b
       h2.titulo-bloque Mas recientes
       ul.related
         - @latest_news.each do |post|
-          - if post.id
+          - if post.title.empty?
             li
               = link_to "#{post.hour} | #{post.title}", main_app.post_path(*post.url_params)
 
