real opionion fix to avoid brake on img missing

--- a/app/views/portada/_sociales.html.slim
+++ b/app/views/portada/_sociales.html.slim
@@ -34,7 +34,7 @@ section.opinion
             - @opiniones.each_with_index do |post, i|
               .item class="#{i == 0 ? 'active': ''}"
                 = link_to main_app.post_path(*post.url_params) do
-                  - if post.image
+                  - if post.image.blank?
                     = image_tag(post.image.url(:size_d), class: 'size-d img-circle' )
                   h4= post.title
                   p.balazo= post.cintillo
