enable longer scripts for resumen

--- a/app/assets/stylesheets/blog/categories_summary.css.less
+++ b/app/assets/stylesheets/blog/categories_summary.css.less
@@ -80,4 +80,10 @@ section.categories_summary {
     margin-bottom: -40px;
     padding: 0 18px;
   }
+  .embed {
+    width: 393px;
+    margin: 0 auto;
+    margin-top: -23px;
+    margin-bottom: 10px;
+  }
 }
