--- a/app/views/application/_soundcloud_resume.html.haml
+++ b/app/views/application/_soundcloud_resume.html.haml
@@ -3,4 +3,5 @@
   .wide-resumen
     %hr
     %h4.titulo-bloque Resumen
-    = raw @portada.soundcloud_frame
+    .embed
+      = raw @portada.soundcloud_frame
