add ability to show a category in hthe header or in the footer

--- a/app/views/application/_categories_summary.html.haml
+++ b/app/views/application/_categories_summary.html.haml
@@ -3,7 +3,7 @@
   %hr
   = link_to '', class: 'go-top' do
     %span.lectura-rapida ir al inicio
-  - Crowdblog::Category.all.each do |category|
+  - Crowdblog::Category.only_footer.all.each do |category|
     .box
       %h4= category.name
       %ul
