--- a/app/views/admin/categories/index.html.slim
+++ b/app/views/admin/categories/index.html.slim
@@ -10,6 +10,8 @@ table.table.table-striped
     tr
       th
       th Name
+      th Header?
+      th Footer?
       th
   tbody
     - @categories.each do |category|
@@ -20,12 +22,17 @@ table.table.table-striped
             = link_to '+ ', main_app.new_admin_category_path(id: category.id), remote: true
             a#editable data-pk="#{category.id}" class="editable" data-title="Enter username" data-type="text" data-url="/admin/categories/#{category.id}" href="#"
               = category.name
+          td= check_box_tag 'is_header',1, category.header , {class: 'is_header', "data-id" => category.id }
+          td= check_box_tag 'is_footer',1, category.footer , {class: 'is_footer', "data-id" => category.id }
           td= link_to 'Delete', "/admin/categories/#{category.id}", method: :delete, confirm: "Estas seguro?"
+
         - category.subcategories.each do |sub_cat|
           tr class='sub_category'
             td= sub_cat.id
             td
               a#editable data-pk="#{sub_cat.id}" class="editable" data-title="Enter username" data-type="text" data-url="/admin/categories/#{sub_cat.id}" href="#"
                 = sub_cat.name
+            td= check_box_tag 'is_header',1, sub_cat.header, {class: 'is_header', "data-id" => sub_cat.id }
+            td= check_box_tag 'is_footer',1, sub_cat.footer, {class: 'is_footer', "data-id" => sub_cat.id }
             td= link_to 'Delete', "/admin/categories/#{sub_cat.id}", method: :delete, confirm: "Estas seguro?"
 
