add las plumas to portada

--- a/app/assets/stylesheets/blog/portada.css.less
+++ b/app/assets/stylesheets/blog/portada.css.less
@@ -76,7 +76,9 @@
       }
 
       .resumen {font-size: 13px;}
+
     }
+
 
     .resumen {
       color: #A1A1A0;
@@ -86,7 +88,9 @@
       &:hover {
         cursor: pointer;
       }
+
     }
+
 
     ul.related{
       background: #F2F4F4;
@@ -111,6 +115,13 @@
         }
 
       }
+    }
+    &.plumas {
+      background: #EEEEEE;
+      box-sizing: border-box;
+      padding: 9px;
+      h4, p { margin: 0}
+
     }
 
   }
