--- a/app/views/portada/_section_b.html.slim
+++ b/app/views/portada/_section_b.html.slim
@@ -4,7 +4,8 @@ section.section_b
       - post =  @secundaria.posts[0] 
       article.noticia-secundaria-a
         .header
-          h2.titulo-tag Aumento de tarifas
+          - if post.tags.any?
+            h2.titulo-tag= post.tags.first.name
           p.cintillo= post.cintillo
           = image_tag('transparent.png', class: 'size-d lazy', "data-original" => post.image.size_d)
           h2
@@ -13,11 +14,11 @@ section.section_b
           p.date=  post.date_and_hour
           = link_to 'lectura rapida', main_app.quick_view_crowdblog_posts_path(id: post.id), class: 'lectura-rapida', remote: true
 
-      ul.related
-        li
-          = link_to 'Aumentara 1 peso el transporte publico en autobuses', "#"
-        li
-          = link_to 'En julio tarjeta de descuento FEC', '#'
+      - if post.related.any?
+        ul.related
+          - post.related.each do |related|
+            li= link_to related.title, main_app.post_path(*related.url_params)
+
     - if  @secundaria.posts[1]
       - post =  @secundaria.posts[1]
       article.noticia-secundaria-b
@@ -48,7 +49,8 @@ section.section_b
       - post =  @secundaria.posts[4]
       article.noticia-secundaria-f
         .header
-          h2.titulo-tag Sucecion presindecial
+          - if post.tags.any?
+            h2.titulo-tag= post.tags.first.name
           p.cintillo= post.cintillo
           = image_tag('transparent.png', class: 'size-d lazy', "data-original" => @secundaria.posts[2].image.size_d)
           h2
