more css tweaks

--- a/app/assets/stylesheets/blog/categories_summary.css.less
+++ b/app/assets/stylesheets/blog/categories_summary.css.less
@@ -6,6 +6,7 @@ section.categories_summary {
     width: 110px;
     color: white;
     font-weight: lighter;
+    a, a:hover {color: white;}
 
   }
   .box {
