--- a/app/assets/stylesheets/blog/portada.css.less
+++ b/app/assets/stylesheets/blog/portada.css.less
@@ -311,6 +311,13 @@
       text-decoration: none;
     }
   }
+ &.policiaca {
+   margin: 20px 0;
+   a{
+    width: 980px;
+   background-position: 950px center;
+  }
+ }
 }
 .titulo-bloque, h2.titulo-tag {
   color: #ECECEB;
