--- a/app/views/portadas/show.html.haml
+++ b/app/views/portadas/show.html.haml
@@ -10,3 +10,5 @@
   = render 'portada/sociales'
   = link_to image_tag('banners/banner_l.gif'), '#', class: 'banners'
   = render 'portada/policiacas'
+
+= render 'portada/dod-policiaca'
