--- a/app/assets/stylesheets/blog/footer.css.less
+++ b/app/assets/stylesheets/blog/footer.css.less
@@ -1,5 +1,10 @@
 @main-gray: #4A4540;
 footer {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index: 10;
   padding: 10px 5px;
   background: @main-gray;
 
