--- a/app/views/crowdblog/application/_navbar.html.slim
+++ b/app/views/crowdblog/application/_navbar.html.slim
@@ -9,4 +9,5 @@
         li= link_to 'Authors', main_app.admin_authors_path
         li= link_to 'Portadas', main_app.admin_portadas_path
         li= link_to 'Es Noticia', main_app.admin_esnoticia_path
-        li= link_to 'Sign out', main_app.destroy_user_session_path
+        li= link_to 'Banners', main_app.admin_banners_path
+        li= link_to 'Sign out', main_app.destroy_user_session_path, class: 'pull-right'
