--- a/app/views/crowdblog/posts/show.html.slim
+++ b/app/views/crowdblog/posts/show.html.slim
@@ -16,4 +16,4 @@
   meta property='og:title' content="#{@post.title}"
   meta property='og:description' content="#{@post.title}"
   meta property='og:url' content="#{main_app.post_url(*@post.url_params).html_safe}"
-  meta property='og:type' content='blog'
+  meta property='og:type' content='article'
