different layout and css fixes

--- a/app/assets/stylesheets/blog/portada.css.less
+++ b/app/assets/stylesheets/blog/portada.css.less
@@ -109,6 +109,9 @@
         a {
           color: #858686;
           display: block;
+          white-space: nowrap;
+          overflow: hidden;
+          text-overflow: ellipsis;
           &:hover {
             text-decoration: none;
           }
